ghc-4335c07/testsuite/tests/parser/should_fail/readFail019.hs
-- !!! cannot close an explicit layout context with a parse error
module ShouldFail where
f = let { x = 42 in x
