ghc-4335c07/testsuite/tests/parser/should_fail/readFail019.stderr

readFail019.hs:3:18: parse error on input ‘in’
